test/ci/front-end/fail/tuple.rav
module M {

  proc p() {
    var x: (Int, Bool) := (1, true);
    var y: Int := x#0;
    var z: Bool := x#1;
    var zz: Int := x#2;
  } 
  

}